# learn-python

./: .gitignore  README.md
fastapi-demo/: README.md  main.py  pyproject.toml
fastapi-demo/tests/: pathlib.test.py  pydantic_test.py  soud.test.py
flask-restful-demo/: README.md  main.py  pyproject.toml
flask-restful-demo/app/TodoSimple/: __init__.py
lesson/: cookie_test.py  map_test.py  第10章正则表达式&_json.py  第11章enum.py  第11章函数.py  第12章lamda.py  第14章补充内容.py  第15yield.py  第1章.py  第4章Python组.py  第6章流程控制语句.py  第7章包、模块、函数与变量作用域.py  第8章函数.py  第9章.py
lesson/module_test/: c7.py  c8.py  from_index.py  index.py  json_test.py
model_test/: pyproject.toml
model_test/src/: main.py  video.py
playwright-test/: Pipfile  README.md  index.py  test.py
playwright-test/spider/: __init__.py  playwright_test_demo.py
poetry-demo/: README.md  pyproject.toml
poetry-demo/src/: main.py
python_book/: 01_collection.py
scrapy-test/: Pipfile  README.md  test.py
scrapy-test/douban/: run_douban.py
scrapy-test/nbfox/: run_nbfox.py  scrapy.cfg
scrapy-test/tutorial/: run_tubatu.py
scrapy-test/xueersi/: run_xueersi.py  scrapy.cfg
sqlalchemy-demo/: Pipfile  REAME.md  db_init.py  main.py  test_sqlalchemy_01.py  test_sqlalchemy_02.py  test_sqlalchemy_03.py  test_sqlalchemy_04_insert.py  test_sqlalchemy_05_select.py  test_sqlalchemy_06_select.py  test_sqlalchemy_07_update.py
sqlalchemy-demo/02_one_to_many/: 01_insert.py  02_select.py  db_init.py
test/: regex_test.py
tool/: ExceptContext.py  Timer.py  lambda_test.py  test.py
zerg/: Pipfile  data.py  index.html  index.py
(+35 files in other folders)
