[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["liujianwei1 <liujianwei1@tal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pathlib2 = "^2.3.7.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
