[tool.poetry]
name = "model-test"
version = "0.1.0"
description = ""
authors = ["liujianwei1 <liujianwei1@tal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
zhipuai = "^2.1.4.20230814"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
