[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["liujianwei1 <liujianwei1@tal.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
